[gd_scene load_steps=2 format=3 uid="uid://ep3jccktk1mf"]

[ext_resource type="Script" path="res://assets/scripts/login.gd" id="1_8tq2c"]

[node name="Login" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="usernameInput" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -277.5
offset_top = -211.0
offset_right = 277.5
offset_bottom = -93.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 50
placeholder_text = "username"
alignment = 1

[node name="passwordInput" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -277.5
offset_top = -46.0
offset_right = 277.5
offset_bottom = 72.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
placeholder_text = "password"
alignment = 1
secret = true

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -117.0
offset_top = 142.0
offset_right = 110.0
offset_bottom = 209.0
grow_horizontal = 2
grow_vertical = 2
text = "Login"
script = ExtResource("1_8tq2c")

[node name="HTTPRequest" type="HTTPRequest" parent="Button"]

[connection signal="pressed" from="Button" to="Button" method="_on_pressed"]
